feat(exception): add better diagnostics to `InvalidBoxException`